more cleanups